<resources>
    <string name="app_name">Entrega meu pacote!</string>
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_sobrenome">Sobrenome</string>
    <string name="cadastro_email">E-mail</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_cadastre_se">Cadastre-se</string>
    <string name="pacote">Pacote</string>
    <string name="possui_conta_entre_aqui">Já possui conta? Entre aqui.</string>
    <string name="title_activity_tela_inicial">tela_inicial</string>
    <string name="solicitar_nova_entrega">Solicitar nova entrega</string>
    <string name="acompanhar_entrega_em_andamento">Acompanhar entrega em andamento</string>
    <string name="consultar_hist_de_entregas">Consultar histórico de entregas</string>
    <string name="configurar_minha_conta">Configurar minha conta</string>
    <string name="sair_da_minha_conta">Sair da minha conta</string>
    <string name="title_activity_tela_login">tela_login</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_nova_entrega_1">nova_entrega_1</string>
    <string name="dimens_aproximadas_do_pacote">Dimensões (aproximadas) do pacote</string>
    <string name="dimens_do_pacote">Dimensões do pacote</string>
    <string name="end_de_origem">Endereço de origem</string>
    <string name="cm">cm</string>
    <string name="p">P:</string>
    <string name="l">L:</string>
    <string name="a">A:</string>
    <string name="rua_das_origens">Rua das origens</string>
    <string name="complemento">Complemento</string>
    <string name="instr_de_retirada">Instruções de retirada - o que deve ser feito?</string>
    <string name="end_de_destino">Endereço de destino</string>
    <string name="rua_das_chegadas">Rua das chegadas</string>
    <string name="instr_de_entrega">Instruções de entrega - o que deve ser feito?</string>
    <string name="n">nº</string>
    <string name="title_activity_confirma_entrega">confirma_entrega</string>
    <string name="placeholder_nova_entrega">O valor da entrega é de R$25,00 e o tempo estimado é de 25 minutos.</string>
    <string name="prosseguir_com_a_entrega">Prosseguir com a entrega</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_finaliza_entrega">finaliza_entrega</string>
    <string name="sua_entrega_foi_solicitada_com_sucesso">Sua entrega foi solicitada com sucesso!</string>
    <string name="acompanhar_a_entrega">Acompanhar a entrega</string>
    <string name="ver_detalhes_da_solicitacao">Ver detalhes da solicitação</string>
    <string name="ir_para_a_tela_inicial">Ir para a tela inicial</string>
    <string name="identificacao_do_pedido">Identificação do pedido</string>
    <string name="identificacao_do_pedido_ex">Como o seu pedido vai aparecer no histórico. Ex.: Pizza da Villa Speranza</string>
    <string name="title_activity_historico_entregas">historico_entregas</string>
    <string name="pizza_da_villa_speranza">Pizza da Villa Speranza</string>
    <string name="_24_02_2018">24/02/2018</string>
    <string name="em_24_02_2018">em 24/02/2018</string>
    <string name="detalhes">+ detalhes</string>
    <string name="title_activity_teste">teste</string>
    <string name="title_activity_detalhe_entrega">detalhe_entrega</string>
    <string name="repetir_a_entrega">Repetir a entrega</string>
    <string name="endereco_de_destino_rua_das_chegadas_250">Endereço de destino: Rua das chegadas, 250</string>
    <string name="endereco_de_origem_rua_das_origens_250">Endereço de origem: Rua das origens, 250</string>
    <string name="entregador_jefferson_da_silva">Entregador: Jefferson da Silva</string>
    <string name="tempo_de_entrega_25_minutos">Tempo de entrega: 25 minutos</string>
    <string name="valor_da_entrega_r_25_00">Valor da entrega: R$ 25,00</string>
    <string name="entrega_realizada_em_20_02_2018">Entrega realizada em: 20/02/2018</string>
    <string name="title_activity_config_usuario">config_usuario</string>
    <string name="excluir_conta">Excluir conta</string>
</resources>
