<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/historico_detalhe_entrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizza_da_villa_speranza"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historico_detalhe_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/em_24_02_2018"
            android:textColor="@color/colorPrimaryText" />
    </LinearLayout>

    <TextView
        android:id="@+id/historico_detalhe_mais_detalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/detalhes" />

</RelativeLayout>

