<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="pcs3853.entregameupacote.activities.menu_usuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tela_inicial_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/tela_inicial_btn_solicitar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/solicitar_nova_entrega"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/tela_inicial_btn_acompanhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/acompanhar_entrega_em_andamento"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/tela_inicial_btn_consultar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/consultar_hist_de_entregas"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/tela_inicial_btn_configurar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/configurar_minha_conta"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/tela_inicial_btn_sair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/sair_da_minha_conta"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryLight" />

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
